# nbdocgen

./: LICENSE  README.md  pyproject.toml
nbdocgen/: docgen.py
